<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" app:srcCompat="@drawable/background_weather"
                android:id="@+id/imageView3" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" android:scaleType="fitXY"/>
        <TextView
                android:text="@string/choose_city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView7" android:textSize="36sp"
                android:textColor="@android:color/background_light" android:fontFamily="cursive"
                android:textAlignment="center" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="20dp"
                app:layout_constraintTop_toTopOf="@+id/imageView3"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="74dp"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/editText" android:layout_marginTop="64dp"
                app:layout_constraintTop_toBottomOf="@+id/textView7" android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.498"
                android:textSize="18sp" android:hint="@string/choose_city"/>
        <CheckBox
                android:text="@string/wind_speed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/checkBox" android:layout_marginStart="16dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="32dp"
                app:layout_constraintTop_toBottomOf="@+id/editText"
                android:textColor="@android:color/background_light"/>
        <CheckBox
                android:text="@string/Pressure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/checkBox2" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/checkBox" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp" android:textColor="@android:color/background_light"/>
        <Button
                android:text="@string/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/button2" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
                android:layout_marginBottom="16dp" app:layout_constraintBottom_toBottomOf="parent"/>
        <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/editText2" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="@+id/checkBox" android:layout_marginEnd="8dp"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@+id/checkBox"
                android:layout_marginStart="8dp" android:hint="@string/temprature"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>