<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

    <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/background_weather"
            android:scaleType="fitXY" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0" app:layout_constraintVertical_bias="0.0"
            android:contentDescription="@string/BACKGROUND"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/greetings"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.145"
            android:textSize="36sp"
            android:fontFamily="cursive"
            android:id="@+id/textView"
            android:textColor="@android:color/background_light" android:textStyle="bold"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/saint_pitersburg"
            android:id="@+id/textView2"
            android:layout_marginTop="10dp" app:layout_constraintTop_toBottomOf="@+id/textView"
            android:layout_marginStart="8dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp" android:textAlignment="center"
            app:layout_constraintStart_toStartOf="parent" android:textColor="@android:color/darker_gray"
            android:textSize="18sp"/>
    <TextView
            android:text="@string/_7"
            android:layout_width="370dp"
            android:layout_height="233dp" android:id="@+id/textView3"
            app:layout_constraintEnd_toEndOf="@+id/imageView4" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView4"
            android:textSize="@android:dimen/thumbnail_width" android:textColor="@android:color/holo_orange_light"
            android:typeface="serif"/>
    <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/ratingBar" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textView3" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintHorizontal_bias="0.496"/>

</androidx.constraintlayout.widget.ConstraintLayout>