<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" app:srcCompat="@drawable/background_weather"
                android:id="@+id/imageView2" android:scaleType="fitXY"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"
        />
        <TextView
                android:text="@string/optionscreen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView6" android:textAlignment="center" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp" android:textSize="36sp"
                android:textColor="@android:color/background_light" android:fontFamily="cursive"
                android:layout_marginTop="20dp" app:layout_constraintTop_toTopOf="@+id/imageView2"/>
        <Switch
                android:text="@string/night_theme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/switch3"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="16dp"
                android:textSize="14sp"
                android:layout_marginTop="40dp" app:layout_constraintTop_toBottomOf="@+id/textView6"
                android:textAlignment="viewStart" android:textOn="on" android:textOff="of"
                android:textColor="@android:color/background_light"/>
        <Button
                android:text="@string/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:id="@+id/button"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp" android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toBottomOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</LinearLayout>